@@ -9,7 +9,7 @@ use Test::Script;
 # find lib -type f | perl -pe 's[^lib/][    ]; s[.pm$][]; s[/][::]g'
 my @classes = qw(
     Hailo
-    Hailo::Storage::Mixin::DBD
+    Hailo::Storage::DBD
     Hailo::Storage::DBD::SQLite
     Hailo::Storage::DBD::mysql
     Hailo::Storage::DBD::Pg
