@@ -3,12 +3,12 @@ use strict;
 use warnings;
 use Test::More tests => 4;
 use Hailo;
-use Hailo::Storage::Mixin::DBD;
+use Hailo::Storage::DBD;
 use Hailo::Storage::DBD::Pg;
 use Hailo::Storage::DBD::SQLite;
 use Hailo::Storage::DBD::mysql;
 
-my $sql    = Hailo::Storage::Mixin::DBD->new;
+my $sql    = Hailo::Storage::DBD->new;
 my $pg     = Hailo::Storage::DBD::Pg->new;
 my $sqlite = Hailo::Storage::DBD::SQLite->new;
 my $mysql  = Hailo::Storage::DBD::mysql->new;
